--- a/app/translations/ru/LC_MESSAGES/messages.po
+++ b/app/translations/ru/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GAEJStable 1.0\n"
 "Report-Msgid-Bugs-To: nimnull@gmail.com\n"
-"POT-Creation-Date: 2012-01-28 01:22+0200\n"
+"POT-Creation-Date: 2012-01-28 17:16+0200\n"
 "PO-Revision-Date: 2012-01-27 15:02+0200\n"
 "Last-Translator: Yegor Nazarkin <nimnull@gmail.com>\n"
 "Language-Team: ru <LL@li.org>\n"
@@ -151,6 +151,35 @@ msgstr "Фамилия:"
 msgid "Last logged in:"
 msgstr "Время последнего входа:"
 
+#: auth/templates/auth/recover_ask.html:3
+msgid "Password recovery"
+msgstr "Восстановление пароля"
+
+#: auth/templates/auth/recover_ask.html:9
+msgid ""
+"Check your email inbox or try to request password recovery again a bit "
+"later."
+msgstr ""
+"Проверьте ваш электронный почтовый ящик, письмо придет в течении 5 минут."
+" В противном случае - повторите попытку восстановления пароля спустя "
+"некоторое время"
+
+#: auth/templates/auth/recover_ask.html:13
+msgid "Here you can request a link for password reset."
+msgstr "Здесь можно запросить специальную ссылку для сброса пароля."
+
+#: auth/templates/auth/recover_ask.html:14
+msgid ""
+"We'll send a special link to the email you provided us with at the "
+"signing up time."
+msgstr ""
+"Мы отправим секретную ссылку, с помощью которой можно будет сбросить "
+"пароль на адрес вашей электронной почты, указанной при регистрации"
+
+#: auth/templates/auth/recover_ask.html:18
+msgid "Confirm"
+msgstr "Подтвердить"
+
 #: auth/templates/auth/sign_in.html:3 templates/base.html:30
 msgid "Sign In"
 msgstr "Вход"
@@ -164,7 +193,7 @@ msgid "If you fill yourself as been forgoten your password, proceed to the"
 msgstr "Если вы забыли пароль, пожалуйста, перейдите на"
 
 #: auth/templates/auth/sign_in.html:10
-msgid "password recover page"
+msgid "password recovery page"
 msgstr "страницу восстановления пароля"
 
 #: auth/templates/auth/sign_in.html:15
@@ -200,6 +229,72 @@ msgstr "Все поля обязательны для заполнения. По
 msgid "Sign Up!"
 msgstr "Регистрироваться!"
 
+#: auth/templates/auth/email/activate.html:1
+#, python-format
+msgid ""
+"\n"
+"Hello, %(user)s!\n"
+"\n"
+"You have to confirm your email address to activate your account at "
+"%(site)s.\n"
+"Please, follow this link to do that: http://%(hostname)s%(path)s\n"
+"\n"
+"You don't need to reply on this message. If you have a quesions - follow "
+"the suppor email address listed at %(site)s.\n"
+"\n"
+"--\n"
+"Sincerely yours, %(site)s team."
+msgstr ""
+"\n"
+"Здравствуйте, %(user)s!\n"
+"\n"
+"Для активации учетной записи на сайте %(site)s вам нужно подтверидть "
+"данный адрес электронной почты.\n"
+"Чтобы сделать это, пожалуйста, перейдите по ссылке: "
+"http://%(hostname)s%(path)s\n"
+"\n"
+"Не нужно отвечать на это сообщение. Если у вас возникли вопросы или "
+"проблемы с сайтом - пожалуйста, пишите на Email службы поддержки, он "
+"указан на %(site)s.\n"
+"\n"
+"--\n"
+"С уважением, команда сайта %(site)s."
+
+#: auth/templates/auth/email/recovery.html:2
+#, python-format
+msgid ""
+"\n"
+"Hello, %(user)s!\n"
+"\n"
+"You've requested password recovery for %(site)s.\n"
+"If this is not you want or you didn't request recovery, just delete this "
+"message.\n"
+"Elsewere, please follow the link to get the page where you can set a new "
+"password for you account:\n"
+"http://%(hostname)s%(path)s\n"
+"\n"
+"You don't need to reply on this message. If you have a quesions - follow "
+"the suppor email address listed at %(site)s.\n"
+"\n"
+"--\n"
+"Sincerely yours, %(site)s team."
+msgstr ""
+"\n"
+"Здравствуйте, %(user)s!\n"
+"\n"
+"Вы воспользовались сервисом сброса пароля на сайте %(site)s.\n"
+"Если данное письмо пришло к вам по ошибке, или сброс пароля больше не "
+"трубется, пожалуйста - удалите это сообщение.\n"
+"Для того, чтобы сбросить пароль, проследуйте по "
+"ссылке:http://%(hostname)s%(path)s\n"
+"\n"
+"Не нужно отвечать на это сообщение. Если у вас возникли вопросы или "
+"проблемы с сайтом - пожалуйста, пишите на Email службы поддержки, он "
+"указан на %(site)s.\n"
+"\n"
+"--\n"
+"С уважением, команда сайта %(site)s."
+
 #: auth/views/registration.py:37
 #, python-format
 msgid "[%s] Account activation"
@@ -215,19 +310,19 @@ msgstr "Пользователь с этим email и паролем "
 
 #: auth/views/registration.py:93
 #, python-format
-msgid "[%s] Password recovery"
-msgstr "[%s] Восстановление пароля"
+msgid "[%(title)s] Password recovery"
+msgstr "[%(title)s] Восстановление пароля"
 
 #: auth/views/registration.py:97
 #, python-format
 msgid ""
-"We've just sent an email to <strong>%s</strong> with the special link for"
-" you to reset lost password."
+"We've just sent an email to <strong>%(username)s</strong> with the "
+"special link for you to reset lost password."
 msgstr ""
-"Мы отправили вам письмо на адрес <strong>%s</strong> со специальной "
-"ссылкой для восстановления пароля."
+"Мы отправили вам письмо на адрес <strong>%(username)s</strong> со "
+"специальной ссылкой для восстановления пароля."
 
-#: auth/views/registration.py:121
+#: auth/views/registration.py:119
 #, python-format
 msgid ""
 "Your didn't provide a token or it is no longer valid. <a "
@@ -272,7 +367,7 @@ msgstr "Пожалуйста, заполните название раздела
 
 #: catalog/templates/catalog/create_record.html:3
 #, python-format
-msgid "Create record for %(cat)s category"
+msgid "Create record for category %(cat)s"
 msgstr "Создать позицию в разделе %(cat)s"
 
 #: catalog/templates/catalog/create_record.html:8
@@ -608,6 +703,14 @@ msgstr "Пожалуйста, введите дату или время"
 #: lib/wtforms/ext/dateutil/fields.py:60
 msgid "Invalid date/time input"
 msgstr "Неверный формат даты или времени"
+
+#: templates/404.html:3
+msgid "Page Not Found"
+msgstr "Страница не найдена"
+
+#: templates/404.html:9
+msgid "We couldn't find the page you requested."
+msgstr "Нам не удалось найти запрошенную страницу."
 
 #: templates/base.html:20
 msgid "Manage catalog"
