--- a/app/translations/ru/LC_MESSAGES/messages.po
+++ b/app/translations/ru/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GAEJStable 1.0\n"
 "Report-Msgid-Bugs-To: nimnull@gmail.com\n"
-"POT-Creation-Date: 2012-01-28 17:16+0200\n"
+"POT-Creation-Date: 2012-01-28 18:58+0200\n"
 "PO-Revision-Date: 2012-01-27 15:02+0200\n"
 "Last-Translator: Yegor Nazarkin <nimnull@gmail.com>\n"
 "Language-Team: ru <LL@li.org>\n"
@@ -346,6 +346,10 @@ msgstr "введите название позиции"
 #: catalog/forms.py:19
 msgid "Description"
 msgstr "Описание"
+
+#: catalog/forms.py:22
+msgid "Tags"
+msgstr "Метки"
 
 #: catalog/templates/catalog/_list_records.html:9
 #: catalog/templates/catalog/filtered_records.html:25
